--- a/about.html
+++ b/about.html
@@ -62,12 +62,12 @@
       </div>
     </section>
 		
-		<section class="ftco-section ftco-intro" style="background-image: url(images/intro.jpg);">
+		<section class="ftco-section ftco-intro" style="background-image: url(images/aboutimg2.jpg);">
 			<div class="container">
 				<div class="row justify-content-end">
 					<div class="col-md-6">
 						<div class="heading-section ftco-animate">
-	            <h2 class="mb-4">Benefits of Doing Spa &amp; Massage</h2>
+	            <h2 class="mb-4"><strong>RosemSami Jewelry</strong></h2>
 	          </div>
 	          <p class="ftco-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 	          <ul class="mt-5 do-list">
@@ -82,44 +82,7 @@
 			</div>
 		</section>
 
-		<section class="ftco-section ftco-no-pt ftco-no-pb">
-			<div class="container">
-				<div class="row no-gutters">
-					<div class="col-md-4 d-flex align-items-stretch">
-						<div class="offer-deal text-center px-2 px-lg-5">
-							<div class="img" style="background-image: url(images/offer-deal-1.jpg);"></div>
-							<div class="text mt-4">
-								<h3 class="mb-4">Book Your Treatment</h3>
-								<p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								<p><a href="#" class="btn btn-white px-4 py-3"> Book A Treatment <span class="ion-ios-arrow-round-forward"></span></a></p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 d-flex align-items-stretch">
-						<div class="offer-deal active text-center px-2 px-lg-5">
-							<div class="img" style="background-image: url(images/offer-deal-2.jpg);"></div>
-							<div class="text mt-4">
-								<h3 class="mb-4">Great Gift Packages</h3>
-								<p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								<p><a href="#" class="btn btn-white px-4 py-3"> Book A Treatment <span class="ion-ios-arrow-round-forward"></span></a></p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4 d-flex align-items-stretch">
-						<div class="offer-deal text-center px-2 px-lg-5">
-							<div class="img" style="background-image: url(images/offer-deal-3.jpg);"></div>
-							<div class="text mt-4">
-								<h3 class="mb-4">Special Offer &amp; Deal</h3>
-								<p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								<p><a href="#" class="btn btn-white px-4 py-3"> Book A Treatment <span class="ion-ios-arrow-round-forward"></span></a></p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-    
-    <section class="ftco-section ftco-section-services bg-light">
+		<section class="ftco-section ftco-section-services bg-light">
     	<div class="container-fluid px-md-5">
     		<div class="row">
     			<div class="col-md-6 col-lg-3">
@@ -169,6 +132,44 @@
 				</div>
     	</div>
     </section>
+
+
+		<section class="ftco-section ftco-no-pt ftco-no-pb">
+			<div class="container">
+				<div class="row no-gutters">
+					<div class="col-md-4 d-flex align-items-stretch">
+						<div class="offer-deal text-center px-2 px-lg-5">
+							<div class="img" style="background-image: url(images/offer-deal-1.jpg);"></div>
+							<div class="text mt-4">
+								<h3 class="mb-4">Book Your Treatment</h3>
+								<p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p><a href="#" class="btn btn-white px-4 py-3"> Book A Treatment <span class="ion-ios-arrow-round-forward"></span></a></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 d-flex align-items-stretch">
+						<div class="offer-deal active text-center px-2 px-lg-5">
+							<div class="img" style="background-image: url(images/offer-deal-2.jpg);"></div>
+							<div class="text mt-4">
+								<h3 class="mb-4">Great Gift Packages</h3>
+								<p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p><a href="#" class="btn btn-white px-4 py-3"> Book A Treatment <span class="ion-ios-arrow-round-forward"></span></a></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 d-flex align-items-stretch">
+						<div class="offer-deal text-center px-2 px-lg-5">
+							<div class="img" style="background-image: url(images/offer-deal-3.jpg);"></div>
+							<div class="text mt-4">
+								<h3 class="mb-4">Special Offer &amp; Deal</h3>
+								<p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p><a href="#" class="btn btn-white px-4 py-3"> Book A Treatment <span class="ion-ios-arrow-round-forward"></span></a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
     <section class="ftco-section testimony-section">
       <div class="container">
