cimmit by dk with updated about page

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Energen - Free Bootstrap 4 Template by Colorlib</title>
+    <title>About | RosenSammi Jewelry</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -88,10 +88,10 @@
     			<div class="col-md-6 col-lg-3">
 						<div class="services text-center ftco-animate">
 							<div class="icon d-flex justify-content-center align-items-center">
-								<span class="flaticon-candle"></span>
+								<span><img style="height: 80px" src="images/medallion.svg"></span>
 							</div>
 							<div class="text mt-3">
-								<h3>Aromatheraphy</h3>
+								<h3>Necklaces</h3>
 								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
 							</div>
 						</div>
@@ -99,10 +99,10 @@
 					<div class="col-md-6 col-lg-3">
 						<div class="services text-center ftco-animate">
 							<div class="icon d-flex justify-content-center align-items-center">
-								<span class="flaticon-beauty-treatment"></span>
+								<span><img style="height: 80px" src="images/ring.svg"></span>
 							</div>
 							<div class="text mt-3">
-								<h3>Skin Care</h3>
+								<h3>Rings</h3>
 								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
 							</div>
 						</div>
@@ -110,10 +110,10 @@
 					<div class="col-md-6 col-lg-3">
 						<div class="services text-center ftco-animate">
 							<div class="icon d-flex justify-content-center align-items-center">
-								<span class="flaticon-stone"></span>
+								<span><img style="height: 80px" src="images/earrings.svg"></span>
 							</div>
 							<div class="text mt-3">
-								<h3>Herbal Spa</h3>
+								<h3>Earrings</h3>
 								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
 							</div>
 						</div>
@@ -121,10 +121,10 @@
 					<div class="col-md-6 col-lg-3">
 						<div class="services text-center ftco-animate">
 							<div class="icon d-flex justify-content-center align-items-center">
-								<span class="flaticon-relax"></span>
+								<span><img style="height: 80px" src="images/diamond.svg"></span>
 							</div>
 							<div class="text mt-3">
-								<h3>Body Massage</h3>
+								<h3>Artificial Jewelry</h3>
 								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
 							</div>
 						</div>
@@ -137,33 +137,36 @@
 		<section class="ftco-section ftco-no-pt ftco-no-pb">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-4 d-flex align-items-stretch">
+					<div style="background-color:#A91723" class="col-md-4 d-flex align-items-stretch">
 						<div class="offer-deal text-center px-2 px-lg-5">
-							<div class="img" style="background-image: url(images/offer-deal-1.jpg);"></div>
+							<div class="img" style="background-image: url(images/offer.jpg)"></div>
 							<div class="text mt-4">
-								<h3 class="mb-4">Book Your Treatment</h3>
-								<p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								<p><a href="#" class="btn btn-white px-4 py-3"> Book A Treatment <span class="ion-ios-arrow-round-forward"></span></a></p>
+								<h3 style="color:#e3b840" class="mb-4"><strong>Something_goes_here</strong></h3>
+								<p style="color:#f4f4f4" class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</p>
+								<p><a href="#" id="btn-new" class="btn btn-white px-4 py-3"> Know More <span class="ion-ios-arrow-round-forward"></span></a></p>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4 d-flex align-items-stretch">
+					<div style="background-color: #E3B840" class="col-md-4 d-flex align-items-stretch">
 						<div class="offer-deal active text-center px-2 px-lg-5">
-							<div class="img" style="background-image: url(images/offer-deal-2.jpg);"></div>
+							<div class="img" style="background-image: url(images/offer.jpg);"></div>
 							<div class="text mt-4">
-								<h3 class="mb-4">Great Gift Packages</h3>
-								<p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								<p><a href="#" class="btn btn-white px-4 py-3"> Book A Treatment <span class="ion-ios-arrow-round-forward"></span></a></p>
+								<h3 class="mb-4"><strong>Something_goes_here</strong></h3>
+								<p style="color:#E3B840" class="mb-5"><b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</b></p>
+								<p><a href="#" class="btn btn-white px-4 py-3"> Know More <span class="ion-ios-arrow-round-forward"></span></a></p>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4 d-flex align-items-stretch">
+					<div style="background-color:#A91723"  class="col-md-4 d-flex align-items-stretch">
 						<div class="offer-deal text-center px-2 px-lg-5">
-							<div class="img" style="background-image: url(images/offer-deal-3.jpg);"></div>
+							<div class="img" style="background-image: url(images/offer.jpg);"></div>
 							<div class="text mt-4">
-								<h3 class="mb-4">Special Offer &amp; Deal</h3>
-								<p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								<p><a href="#" class="btn btn-white px-4 py-3"> Book A Treatment <span class="ion-ios-arrow-round-forward"></span></a></p>
+								<h3 style="color:#e3b840" class="mb-4"><strong>Something_goes_here</strong></h3>
+								<p style="color:#f4f4f4" class="mb-5"><b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</b></p>
+								<p><a id="btn-new" href="#" class="btn btn-white px-4 py-3"> Know More <span class="ion-ios-arrow-round-forward"></span></a></p>
 							</div>
 						</div>
 					</div>
