--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
   <body>
   	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light ftco-navbar-light-2" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><span class="flaticon-lotus"></span>Energen</a>
+	      <a class="navbar-brand" href="index.html"><span class="flaticon-lotus"></span>RosenSami Jewelry</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -92,7 +92,8 @@
 							</div>
 							<div class="text mt-3">
 								<h3>Necklaces</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</p>
 							</div>
 						</div>
 					</div>
@@ -103,7 +104,8 @@
 							</div>
 							<div class="text mt-3">
 								<h3>Rings</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</p>
 							</div>
 						</div>
 					</div>
@@ -114,7 +116,8 @@
 							</div>
 							<div class="text mt-3">
 								<h3>Earrings</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</p>
 							</div>
 						</div>
 					</div>
@@ -125,7 +128,8 @@
 							</div>
 							<div class="text mt-3">
 								<h3>Artificial Jewelry</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</p>
 							</div>
 						</div>
 					</div>
@@ -178,8 +182,8 @@
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-10 heading-section ftco-animate text-center">
-            <h3 class="subheading">Testimony</h3>
-            <h2 class="mb-1">Successful Stories</h2>
+            <h3 class="subheading">See What Our Clients Have to Say</h3>
+            <h2 class="mb-1">Customer Reviews</h2>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -189,16 +193,17 @@
                 <div class="testimony-wrap p-4 pb-5">
                   <div class="text">
                   	<div class="line pl-5">
-	                    <p class="mb-4 pb-1">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+	                    <p class="mb-4 pb-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</p>
 	                    <span class="quote d-flex align-items-center justify-content-center">
 	                      <i class="icon-quote-left"></i>
 	                    </span>
 	                  </div>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_1.jpg)">
+                    	<div class="user-img" style="background-image: url(images/person.png)">
 		                  </div>
 		                  <div class="ml-4">
-		                  	<p class="name">Gabby Smith</p>
+		                  	<p class="name">Pooja Joshi</p>
 		                    <span class="position">Customer</span>
 		                  </div>
                     </div>
@@ -209,17 +214,18 @@
                 <div class="testimony-wrap p-4 pb-5">
                   <div class="text">
                     <div class="line pl-5">
-	                    <p class="mb-4 pb-1">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+	                    <p class="mb-4 pb-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</p>
 	                    <span class="quote d-flex align-items-center justify-content-center">
 	                      <i class="icon-quote-left"></i>
 	                    </span>
 	                  </div>
 
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_2.jpg)">
+                    	<div class="user-img" style="background-image: url(images/person.png)">
 		                  </div>
 		                  <div class="ml-4">
-		                  	<p class="name">Floyd Weather</p>
+		                  	<p class="name">Angad Oberoi</p>
 		                    <span class="position">Customer</span>
 		                  </div>
                     </div>
@@ -230,17 +236,18 @@
                 <div class="testimony-wrap p-4 pb-5">
                   <div class="text">
                     <div class="line pl-5">
-	                    <p class="mb-4 pb-1">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+	                    <p class="mb-4 pb-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</p>
 	                    <span class="quote d-flex align-items-center justify-content-center">
 	                      <i class="icon-quote-left"></i>
 	                    </span>
 	                  </div>
 
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_3.jpg)">
+                    	<div class="user-img" style="background-image: url(images/person.png)">
 		                  </div>
 		                  <div class="ml-4">
-		                  	<p class="name">James Dee</p>
+		                  	<p class="name">Harshit Gupta</p>
 		                    <span class="position">Customer</span>
 		                  </div>
                     </div>
@@ -251,17 +258,18 @@
                 <div class="testimony-wrap p-4 pb-5">
                   <div class="text">
                     <div class="line pl-5">
-	                    <p class="mb-4 pb-1">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+	                    <p class="mb-4 pb-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</p>
 	                    <span class="quote d-flex align-items-center justify-content-center">
 	                      <i class="icon-quote-left"></i>
 	                    </span>
 	                  </div>
 
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_4.jpg)">
+                    	<div class="user-img" style="background-image: url(images/person.png)">
 		                  </div>
 		                  <div class="ml-4">
-		                  	<p class="name">Lance Roger</p>
+		                  	<p class="name">Divyank Kargeti</p>
 		                    <span class="position">Customer</span>
 		                  </div>
                     </div>
@@ -272,17 +280,18 @@
                 <div class="testimony-wrap p-4 pb-5">
                   <div class="text">
                     <div class="line pl-5">
-	                    <p class="mb-4 pb-1">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+	                    <p class="mb-4 pb-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua.</p>
 	                    <span class="quote d-flex align-items-center justify-content-center">
 	                      <i class="icon-quote-left"></i>
 	                    </span>
 	                  </div>
 
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_2.jpg)">
+                    	<div class="user-img" style="background-image: url(images/person.png)">
 		                  </div>
 		                  <div class="ml-4">
-		                  	<p class="name">Kenny Bufer</p>
+		                  	<p class="name">Rajat Tak</p>
 		                    <span class="position">Customer</span>
 		                  </div>
                     </div>
@@ -304,7 +313,7 @@
 		          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		              	<strong class="number" data-number="2560">0</strong>
+		              	<strong class="number" data-number="2133">0</strong>
 		              	<span>Happy Customers</span>
 		              </div>
 		            </div>
@@ -312,15 +321,15 @@
 		          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		              	<strong class="number" data-number="60">0</strong>
-		              	<span>Treatments</span>
+		              	<strong class="number" data-number="3214">0</strong>
+		              	<span>Items Sold</span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		              	<strong class="number" data-number="50">0</strong>
+		              	<strong class="number" data-number="25">0</strong>
 		              	<span>Years of Experience</span>
 		              </div>
 		            </div>
@@ -328,8 +337,8 @@
 		          <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		              	<strong class="number" data-number="100">0</strong>
-		              	<span>Lesson Conducted</span>
+		              	<strong class="number" data-number="999">0</strong>
+		              	<span>Success Parties</span>
 		              </div>
 		            </div>
 		          </div>
@@ -339,56 +348,13 @@
       </div>
     </section>
 
-		<section class="ftco-gallery ftco-section">
-    	<div class="container">
-    		<div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 heading-section ftco-animate text-center">
-            <h3 class="subheading">Gallery</h3>
-            <h2 class="mb-1">See the latest photos</h2>
-          </div>
-        </div>
-    		<div class="row">
-					<div class="col-md-3 ftco-animate">
-						<a href="images/gallery-1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-1.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/gallery-2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-2.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/gallery-3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-3.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-					<div class="col-md-3 ftco-animate">
-						<a href="images/gallery-4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-4.jpg);">
-							<div class="icon mb-4 d-flex align-items-center justify-content-center">
-    						<span class="icon-instagram"></span>
-    					</div>
-						</a>
-					</div>
-        </div>
-    	</div>
-    </section>
-
-		
-
     <footer class="ftco-footer ftco-section">
       <div class="container">
         <div class="row d-flex">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Energen</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="ftco-heading-2">RosenSami Jewelry</h2>
+              <p style="color:#f4f4f4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-lft mt-3">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -400,10 +366,10 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Popular Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">Aromatheraphy</a></li>
-                <li><a href="#">Skin Care</a></li>
-                <li><a href="#">Herbal Spa</a></li>
-                <li><a href="#">Body Massage</a></li>
+                <li><a id="foot"  href="#">Necklaces</a></li>
+                <li><a id="foot"  href="#">Earrings</a></li>
+                <li><a id="foot"  href="#">Rings</a></li>
+                <li><a id="foot"  href="#">Artificial Jewelry</a></li>
               </ul>
             </div>
           </div>
@@ -411,22 +377,22 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Quick Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Our Spa</a></li>
-                <li><a href="#">Treatments</a></li>
-                <li><a href="#">Specialists</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a id="foot"  href="#">About</a></li>
+                <li><a id="foot"  href="#">Our Spa</a></li>
+                <li><a id="foot"  href="#">Treatments</a></li>
+                <li><a id="foot"  href="#">Specialists</a></li>
+                <li><a id="foot"  href="#">Contact</a></li>
               </ul>
             </div>
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Have a Questions?</h2>
+              <h2 class="ftco-heading-2">Contact Details</h2>
               <div class="block-23 mb-3">
                 <ul>
-                  <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-                  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+                  <li><span style="color:#e3b840" class="icon icon-map-marker"></span><span style="color:#f4f4f4" class="text">D-234 Sector 22 Market, Noida, Uttar Pradesh, India</span></li>
+                  <li><a href="#"><span style="color:#e3b840" class="icon icon-phone"></span><span class="text">+91 9891545874</span></a></li>
+                  <li><a href="#"><span style="color:#e3b840" class="icon icon-envelope"></span><span class="text">info@1234gmail.com</span></a></li>
                 </ul>
               </div>
             </div>
@@ -436,12 +402,10 @@
           <div class="col-md-12 text-center">
 
             <p class="mb-0">
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright &copy;<script>
                 document.write(new Date().getFullYear());
 
-              </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              </script> All rights reserved | Designed & Developed by <a style="color:#f4f4f4" href="HDR LINK HERE" target="_blank"><strong>HDR Web Solutions</strong></a>
             </p>
           </div>
         </div>
