--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="treatments.html" class="nav-link">Treatments</a></li>
-          <li class="nav-item"><a href="specialists.html" class="nav-link">Specialists</a></li>
-          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Something</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Teams</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -60,10 +59,11 @@
           <div class="icon">
             <span class="flaticon-lotus" style="color:#000;"></span>
           </div>
-          <h1>Spa &amp; Beauty Center</h1>
+          <h1>RosenSami Jewelry</h1>
           <div class="row justify-content-center">
             <div class="col-md-7 mb-3">
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
           <p>
@@ -85,11 +85,11 @@
             </div>
             <p class="ftco-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
             <ul class="mt-5 do-list">
-              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Spa &amp; Massage boosts brain power</a></li>
-              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Spa &amp; Massage helps you to breathe better</a></li>
-              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Spa &amp; Massage improves your strength</a></li>
-              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Spa &amp; Massage helps you to focus</a></li>
-              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Spa &amp; Massage helps give meaning to your day</a></li>
+              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Some featuring points</a></li>
+              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Some featuring points</a></li>
+              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Some featuring points</a></li>
+              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Some featuring points</a></li>
+              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Some featuring points</a></li>
             </ul>
           </div>
         </div>
@@ -197,7 +197,7 @@
       <div class="row justify-content-center mb-5 pb-3">
         <div class="col-md-12 heading-section ftco-animate text-center">
           <h3 class="subheading">Services</h3>
-          <h2 class="mb-1">Treatments</h2>
+          <h2 class="mb-1">Pricing</h2>
         </div>
       </div>
       <div class="row align-items-center">
@@ -209,8 +209,8 @@
                   <span class="flaticon-candle"></span>
                 </div>
                 <div class="text mt-2">
-                  <h3>Salt &amp; Aroma</h3>
-                  <p>A small river named Duden flows by their place and supplies.</p>
+                  <h3>Rings</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
               </div>
             </div>
@@ -220,8 +220,8 @@
                   <span class="flaticon-spa-1"></span>
                 </div>
                 <div class="text mt-2">
-                  <h3>Hydro</h3>
-                  <p>A small river named Duden flows.</p>
+                  <h3>necklaces</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
               </div>
             </div>
@@ -231,8 +231,8 @@
                   <span class="flaticon-stone"></span>
                 </div>
                 <div class="text mt-2">
-                  <h3>Hot Stone</h3>
-                  <p>A small river named Duden flows by their place and supplies.</p>
+                  <h3>Pearls</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
               </div>
             </div>
@@ -242,8 +242,8 @@
                   <span class="flaticon-lotus"></span>
                 </div>
                 <div class="text mt-2">
-                  <h3>Aroma</h3>
-                  <p>A small river named Duden flows.</p>
+                  <h3>artificial jewelry</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
               </div>
             </div>
@@ -255,13 +255,13 @@
           <div id="accordion" class="myaccordion w-100 text-center py-5 px-1 px-md-4">
             <div>
               <h3>Prices</h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.sdsd</p>
             </div>
             <div class="card">
               <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
                   <button class="d-flex align-items-center justify-content-between btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Spa Therapies
+                    Something
                     <i class="fa" aria-hidden="true"></i>
                   </button>
                 </h2>
@@ -270,24 +270,24 @@
                 <div class="card-body text-left">
                   <ul>
                     <li class="d-flex">
-                      <span>Face Treatments</span>
-                      <span>40 min.</span>
-                      <span>$10</span>
+                      <span>Something</span>
+                      <span>xyz</span>
+                      <span>Rs.2000</span>
                     </li>
                     <li class="d-flex">
-                      <span>Nail Treatments</span>
-                      <span>30 min.</span>
-                      <span>$20</span>
+                      <span>Something</span>
+                      <span>xyz</span>
+                      <span>Rs.2000</span>
                     </li>
                     <li class="d-flex">
-                      <span>Medical Treatments</span>
-                      <span>60 min.</span>
-                      <span>$10</span>
+                      <span>Something</span>
+                      <span>xyz</span>
+                      <span>Rs.2000</span>
                     </li>
                     <li class="d-flex">
-                      <span>Hair Treatments</span>
-                      <span>30 min.</span>
-                      <span>$30</span>
+                      <span>Something</span>
+                      <span>xyz</span>
+                      <span>Rs.2000</span>
                     </li>
                   </ul>
                 </div>
@@ -298,7 +298,7 @@
               <div class="card-header" id="headingTwo">
                 <h2 class="mb-0">
                   <button class="d-flex align-items-center justify-content-between btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Massage Therapies
+                    Some header here
                     <i class="fa" aria-hidden="true"></i>
                   </button>
                 </h2>
@@ -307,24 +307,24 @@
                 <div class="card-body text-left">
                   <ul>
                     <li class="d-flex">
-                      <span>Face Treatments</span>
-                      <span>40 min.</span>
-                      <span>$10</span>
+                      <span>Something</span>
+                      <span>xyz</span>
+                      <span>Rs.200</span>
                     </li>
                     <li class="d-flex">
-                      <span>Nail Treatments</span>
-                      <span>30 min.</span>
-                      <span>$20</span>
+                      <span>Something</span>
+                      <span>xyz</span>
+                      <span>Rs.200</span>
                     </li>
                     <li class="d-flex">
-                      <span>Medical Treatments</span>
-                      <span>60 min.</span>
-                      <span>$10</span>
+                      <span>Something</span>
+                      <span>xyz</span>
+                      <span>Rs.200</span>
                     </li>
                     <li class="d-flex">
-                      <span>Hair Treatments</span>
-                      <span>30 min.</span>
-                      <span>$30</span>
+                      <span>Something</span>
+                      <span>xyz</span>
+                      <span>Rs.200</span>
                     </li>
                   </ul>
                 </div>
@@ -342,7 +342,7 @@
                   <span class="flaticon-beauty-treatment"></span>
                 </div>
                 <div class="text mt-2">
-                  <h3>Relaxation</h3>
+                  <h3>Something</h3>
                   <p>A small river named Duden flows by their place and supplies.</p>
                 </div>
               </div>
@@ -353,8 +353,8 @@
                   <span class="flaticon-relax"></span>
                 </div>
                 <div class="text mt-2">
-                  <h3>Athlete</h3>
-                  <p>A small river named Duden flows.</p>
+                  <h3>Something</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing eli.</p>
                 </div>
               </div>
             </div>
@@ -364,8 +364,8 @@
                   <span class="flaticon-massage"></span>
                 </div>
                 <div class="text mt-2">
-                  <h3>Thai</h3>
-                  <p>A small river named Duden flows by their place and supplies.</p>
+                  <h3>Something</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing eli.</p>
                 </div>
               </div>
             </div>
@@ -375,8 +375,8 @@
                   <span class="flaticon-rose"></span>
                 </div>
                 <div class="text mt-2">
-                  <h3>Rose</h3>
-                  <p>A small river named Duden flows.</p>
+                  <h3>Something</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing eli.</p>
                 </div>
               </div>
             </div>
@@ -392,7 +392,7 @@
       <div class="row justify-content-center mb-5 pb-3">
         <div class="col-md-7 heading-section ftco-animate text-center">
           <h3 class="subheading">Pricing Tables</h3>
-          <h2 class="mb-1">Pricing Treatments</h2>
+          <h2 class="mb-1">Membership Plans</h2>
         </div>
       </div>
       <div class="row">
@@ -400,39 +400,38 @@
           <div class="block-7">
             <div class="text-center">
               <h2 class="heading">Year Card</h2>
-              <span class="price"><sup>$</sup> <span class="number">449</span></span>
+              <span class="price"><sup>Rs.</sup> <span class="number">1000</span></span>
               <span class="excerpt d-block">For 1 Year</span>
 
               <h3 class="heading-2 my-4">Enjoy All The Features</h3>
 
               <ul class="pricing-text mb-5">
-                <li>Face Treatments</li>
-                <li>Nail Treatments</li>
-                <li>Medical Treatments</li>
-                <li>Hair Removal</li>
+                <li>features</li>
+                <li>features</li>
+                <li>features</li>
+                <li>features</li>
               </ul>
-
-              <a href="#" class="btn btn-primary d-block px-2 py-4">Get Started</a>
-            </div>
+                <a href="#" class="btn btn-primary d-block px-2 py-4">Register Here</a>
+             </div>
           </div>
         </div>
         <div class="col-md-4 ftco-animate">
           <div class="block-7">
             <div class="text-center">
               <h2 class="heading">Monthly Card</h2>
-              <span class="price"><sup>$</sup> <span class="number">200</span></span>
+              <span class="price"><sup>Rs.</sup> <span class="number">700</span></span>
               <span class="excerpt d-block">For 1 Month</span>
 
               <h3 class="heading-2 my-4">Enjoy All The Features</h3>
 
               <ul class="pricing-text mb-5">
-                <li>Face Treatments</li>
-                <li>Nail Treatments</li>
-                <li>Medical Treatments</li>
-                <li>Hair Removal</li>
+               <li>features</li>
+                <li>features</li>
+                <li>features</li>
+                <li>features</li>
               </ul>
 
-              <a href="#" class="btn btn-primary d-block px-2 py-4">Get Started</a>
+              <a href="#" class="btn btn-primary d-block px-2 py-4">Register Here</a>
             </div>
           </div>
         </div>
@@ -440,19 +439,19 @@
           <div class="block-7">
             <div class="text-center">
               <h2 class="heading">Weekly Card</h2>
-              <span class="price"><sup>$</sup> <span class="number">85</span></span>
+              <span class="price"><sup>Rs.</sup> <span class="number">500</span></span>
               <span class="excerpt d-block">For 1 Week</span>
 
               <h3 class="heading-2 my-4">Enjoy All The Features</h3>
 
               <ul class="pricing-text mb-5">
-                <li>Face Treatments</li>
-                <li>Nail Treatments</li>
-                <li>Medical Treatments</li>
-                <li>Hair Removal</li>
+                <li>features</li>
+                <li>features</li>
+                <li>features</li>
+                <li>features</li>
               </ul>
 
-              <a href="#" class="btn btn-primary d-block px-2 py-4">Get Started</a>
+              <a href="#" class="btn btn-primary d-block px-2 py-4">Register Here</a>
             </div>
           </div>
         </div>
@@ -631,7 +630,7 @@
     </section>
 
 
-  <section class="ftco-section bg-light">
+  <!--<section class="ftco-section bg-light">
     <div class="container">
       <div class="row justify-content-center mb-5 pb-3">
         <div class="col-md-7 heading-section ftco-animate text-center">
@@ -699,40 +698,40 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="ftco-gallery ftco-section">
     <div class="container">
       <div class="row justify-content-center mb-5 pb-3">
         <div class="col-md-7 heading-section ftco-animate text-center">
           <h3 class="subheading">Gallery</h3>
-          <h2 class="mb-1">See the latest photos</h2>
+          <h2 class="mb-1">See Our latest products</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-md-3 ftco-animate">
-          <a href="images/gallery-1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-1.jpg);">
+          <a href="images/aboutimg2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/aboutimg2.jpg);">
             <div class="icon mb-4 d-flex align-items-center justify-content-center">
               <span class="icon-instagram"></span>
             </div>
           </a>
         </div>
         <div class="col-md-3 ftco-animate">
-          <a href="images/gallery-2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-2.jpg);">
+          <a href="images/aboutimg2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/aboutimg2.jpg);">
             <div class="icon mb-4 d-flex align-items-center justify-content-center">
               <span class="icon-instagram"></span>
             </div>
           </a>
         </div>
         <div class="col-md-3 ftco-animate">
-          <a href="images/gallery-3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-3.jpg);">
+          <a href="images/aboutimg2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/aboutimg2.jpg);">
             <div class="icon mb-4 d-flex align-items-center justify-content-center">
               <span class="icon-instagram"></span>
             </div>
           </a>
         </div>
         <div class="col-md-3 ftco-animate">
-          <a href="images/gallery-4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/gallery-4.jpg);">
+          <a href="images/aboutimg2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/aboutimg2.jpg);">
             <div class="icon mb-4 d-flex align-items-center justify-content-center">
               <span class="icon-instagram"></span>
             </div>
