--- a/about.html
+++ b/about.html
@@ -37,13 +37,12 @@
 	      </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="treatments.html" class="nav-link">Treatments</a></li>
-	          <li class="nav-item"><a href="specialists.html" class="nav-link">Specialists</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Something</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Teams</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
 		  </div>
@@ -71,11 +70,11 @@
 	          </div>
 	          <p class="ftco-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 	          <ul class="mt-5 do-list">
-	          	<li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Spa &amp; Massage boosts brain power</a></li>
-	          	<li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Spa &amp; Massage helps you to breathe better</a></li>
-	          	<li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Spa &amp; Massage improves your strength</a></li>
-	          	<li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Spa &amp; Massage helps you to focus</a></li>
-	          	<li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Spa &amp; Massage helps give meaning to your day</a></li>
+	          	<li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Some featuring points</a></li>
+              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Some featuring points</a></li>
+              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Some featuring points</a></li>
+              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Some featuring points</a></li>
+              <li class="ftco-animate"><a href="#"><span class="ion-ios-checkmark-circle mr-3"></span>Some featuring points</a></li>
 	          </ul>
 					</div>
 				</div>
